data/derived/comb/progs/unify/prog6126.ml.out
Characters 40-41:
  if(List.length > 1) then let (l1,l2) = split l in merge l1 l2
                   ^
Error: This expression has type int but an expression was expected of type
         'a list -> int
